--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,1 +1,26 @@
-<p>table works!</p>
+<div class="reload-btn">
+    <!-- Reload button -->
+    <i class="bi bi-arrow-repeat" (click)="reloadTable()"></i>
+</div>
+
+<div class="grid-container">
+    <!-- Table headers -->
+    <div class="grid-item table-head">ID</div>
+    <div class="grid-item table-head">Name</div>
+    <div class="grid-item table-head">Category</div>
+    <div class="grid-item table-head">Cost (₦)</div>
+    <div class="grid-item table-head">Description</div>
+    <div class="grid-item table-head">Delete</div>
+</div>
+
+<div class="grid-container" *ngFor="let food of tableData; let i = index">
+    <!-- Table data -->
+    <div class="grid-item table-data">{{ i+1 }}</div>
+    <div class="grid-item table-data">{{ food.name }}</div>
+    <div class="grid-item table-data">{{ food.category }}</div>
+    <div class="grid-item table-data food-cost">{{ food.cost }}</div>
+    <div class="grid-item table-data food-description">{{ food.description }}</div>
+    <div class="grid-item table-data">
+        <i class="bi bi-trash" (click)="deleteFood(food.name)"></i>
+    </div>
+</div>
