--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -1,27 +1,39 @@
 <form class="grid-container" (submit)="addFood()">
-        <label class="grid-item">Food name</label>
-        <label class="grid-item">Category</label>
-        <label class="grid-item">Cost</label>
-        <label class="grid-item">Description</label>
-
         <!-- Food name -->
-        <input [(ngModel)]="inputName" type="text" name="inputName" placeholder="Enter food name..." class="grid-item form-control">
+        <div class="gid-item">
+            <label for="inputName">Food name</label>
+            <input [(ngModel)]="inputName" type="text" id="inputName" name="inputName" placeholder="Enter food name..." class="form-control">
+        </div>
 
         <!-- Category -->
-        <select [(ngModel)]="inputCategory" class="grid-item form-select" name="inputCategory" aria-label=".form-select-sm example">
-            <option value="" disabled selected hidden>Choose cateogry</option>
-            <option value="breakfast">Breakfast</option>
-            <option value="brunch">Brunch</option>
-            <option value="lunch">Lunch</option>
-            <option value="fruit">Fruit</option>
-        </select>
+        <div class="gid-item">
+            <label for="inputCategory">Category</label>
+            <select [(ngModel)]="inputCategory" class="form-select" id="inputCategory" name="inputCategory" aria-label=".form-select-sm example">
+                <option value="" disabled selected hidden>Choose cateogry</option>
+                <option value="breakfast">Breakfast</option>
+                <option value="brunch">Brunch</option>
+                <option value="lunch">Lunch</option>
+                <option value="fruit">Fruit</option>
+            </select>
+        </div>
 
         <!-- Cost -->
-        <input [(ngModel)]="inputCost" type="number" step="0.01" name="inputCost" class="grid-item form-control">
+        <div class="gid-item">
+            <label for="inputCost">Cost (₦)</label>
+            <input [(ngModel)]="inputCost" type="number" step="0.01" id="inputCost" name="inputCost" class="form-control">
+        </div>
 
         <!-- Description -->
-        <textarea [(ngModel)]="inputDescription" type="text" name="inputDescription" placeholder="Enter description" class="grid-item form-control"></textarea>
+        <div class="gid-item">
+            <label for="inputDescription">Description</label>
+            <textarea [(ngModel)]="inputDescription" type="text" id="inputDescription" name="inputDescription" placeholder="Enter description" class="form-control"></textarea>
+        </div>
 
-        <button type="submit" class="grid-item">Submit</button>
-
+        <!-- Buttons -->
+        <div class="gid-item">
+            <button type="submit">Submit</button>
+            <button type="reset">Clear Form</button>
+        </div>
 </form>
+
+<app-table></app-table>
