--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -46,4 +46,11 @@ $inputBoxSpace : 30px;
     .food-description{
         text-align: center;
     }
+
+    .bi-trash{
+        color: $brandRed;
+    }
+    .bi-trash:hover{
+        color: $brandBlue;
+    }
 }
