--- a/src/app/components/create/create.component.scss
+++ b/src/app/components/create/create.component.scss
@@ -35,6 +35,7 @@ $inputBoxSpace : 30px;
         color: $brandBlack;
         background-color: $brandRed;
         margin-right: 10px;
+        margin-top: 40px;
     }
 
     button:hover{
@@ -43,4 +44,5 @@ $inputBoxSpace : 30px;
             color: $brandBlack;
         }
     }
+
 }
