--- a/src/app/components/read/read.component.scss
+++ b/src/app/components/read/read.component.scss
@@ -35,6 +35,7 @@ $inputBoxSpace : 30px;
         color: $brandBlack;
         background-color: $brandRed;
         margin-right: 10px;
+        margin-top: 40px;
     }
 
     button:hover{
@@ -43,14 +44,19 @@ $inputBoxSpace : 30px;
             color: $brandBlack;
         }
     }
+
+    .btn{
+        border-radius: 5rem;
+        font-size: 1rem;
+        font-weight: bold;
+        width: 100px;
+        color: $brandRed;
+        margin-right: 30px;
+        margin-top: 40px;
+    }
+
 }
 
-$brandRed    : #A84B5D;
-$brandYellow : #F6EFA6;
-$brandBlack  : #2E2F2F;
-$brandBlue   : #759FBC;
-$tabletSize  : 1000px;
-$inputBoxSpace : 30px;
 
 .reload-btn{
     margin-left: $inputBoxSpace;
@@ -63,7 +69,7 @@ $inputBoxSpace : 30px;
 
 .grid-container {
     display: grid;
-    grid-template-columns: 5% 20% 20% 20% 35%;
+    grid-template-columns: 5% 30% 30% 30%;
     margin-left: $inputBoxSpace;
     margin-right: $inputBoxSpace;
     margin-bottom: 0px;
@@ -88,9 +94,5 @@ $inputBoxSpace : 30px;
 
     .food-cost{
         text-align: right;
-    }
-
-    .food-description{
-        text-align: center;
     }
 }
