--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -9,6 +9,7 @@
         <th>Name</th>
         <th>Category</th>
         <th>Cost (₦)</th>
+        <th>Update</th>
         <th>Delete</th>
     </thead>
 
@@ -16,8 +17,9 @@
         <tr *ngFor="let food of tableData; let i = index">
             <td class="food-id">{{ i+1 }}</td>
             <td class="food-name">{{ food.name }}</td>
-            <td class="category"><p class="food-category" [class]=[food.category]>{{ food.category }}</p></td>
+            <td class="category"><div class="food-category" [class]=[food.category]>{{ food.category }}</div></td>
             <td class="food-cost">{{ food.cost }}</td>
+            <td><i class="bi bi-pencil-square"></i></td>
             <td> <i class="bi bi-trash" (click)="deleteFood(food.name)"></i></td>
         </tr>
     </tbody>
