--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -19,7 +19,7 @@
             <td class="food-name">{{ food.name }}</td>
             <td class="category"><div class="food-category" [class]=[food.category]>{{ food.category }}</div></td>
             <td class="food-cost">{{ food.cost }}</td>
-            <td><i class="bi bi-pencil-square"></i></td>
+            <td><i class="bi bi-pencil-square" (click)="openEditDialog(food.name, food.category, food.cost)"></i></td>
             <td><i class="bi bi-trash" (click)="openDeleteDialog(food.name, food.category, food.cost)"></i></td>
         </tr>
     </tbody>
